red/overlays/bar/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: red
  namespace: bar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - :host: bar.localhost
    :http:
      :paths:
      - :path: "/red"
        :backend:
          :serviceName: red
          :servicePort: 80
